src/layout/ui.css
/* scrollbar */
::-webkit-scrollbar {
    width: 12px;
    height: 12px;
}

::-webkit-scrollbar-track-piece {
    background-color: #f8f8f8;
}

::-webkit-scrollbar-thumb {
    background-color: #bfbfbf;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: #aaa;
}

::-webkit-scrollbar-thumb:active {
    background-color: #999;
}

@-webkit-keyframes "newsblink" {
    0% {
        -webkit-transform: rotate(0);
    }

    25% {
        -webkit-transform: rotate(20deg);
    }

    50% {
        -webkit-transform: rotate(0);
    }

    75% {
        -webkit-transform: rotate(-20deg);
    }

    100% {
        -webkit-transform: rotate(0);
    }
}

@-webkit-keyframes progress-spinner {
    0% {
        -webkit-transform: rotate(0);
    }

    100% {
        -webkit-transform: rotate(360deg);
    }
}


html, body {
    overflow-y: visible;
}

input[type="search"] {
    -webkit-appearance: searchfield !important;
}

input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: searchfield-cancel-button !important;
    cursor: pointer;
    margin-left: 8px;
}

input[type="search"]::-webkit-search-decoration {
    -webkit-appearance: searchfield-decoration !important;
}

body.guest {

}

body.user {
    padding: 60px 0 40px;
}

#sandbox {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: -100%;
}

.bs-callout {
    margin: 20px 0 0;
    padding: 15px 30px 15px 15px;
    border-left: 5px solid #eee;
}

.bs-callout:first-of-type {
    margin-top: 0;
}

.bs-callout h4 {
    margin-top: 0;
}

.bs-callout p:last-child,
.bs-callout ol:last-child {
    margin-bottom: 0;
}

.bs-callout code,
.bs-callout .highlight {
    background-color: #fff;
}

/* Variations */
.bs-callout-danger {
    background-color: #fcf2f2;
    border-color: #dFb5b4;
}
.bs-callout-warning {
    background-color: #fefbed;
    border-color: #f1e7bc;
}
.bs-callout-info {
    background-color: #f0f7fd;
    border-color: #d0e3f0;
}

/* Guest page */
.guest-welcome {
    margin: 0 20px;
}

.guest-welcome .lead:first-of-type {
    margin-top: 24px;
}

.guest-welcome input[type='checkbox'] {
    float: none;
    margin: 0 4px 0 0;
}

/* Header */
header {
    background: rgb(64, 64, 64) url("darknoise.png");
    padding: 8px;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 100;
}

header .header-navback.inactive,
header .header-navforward.inactive {
    color: #666;
    cursor: default;
    pointer-events: none;
}

header .header-local {
    color: white !important;
    font-size: 24px;
    line-height: 18px;
    cursor: pointer;
}

header .header-local::before {
    margin-right: 6px;
    vertical-align: middle;
}

header .header-local .counter {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

header .header-news {
    top: 3px;
}

header .header-news-blinking {
    -webkit-animation: newsblink .65s linear infinite;
}

header input[type="search"] {
    padding-left: 8px;
    padding-right: 8px;
}

header .search {
    cursor: pointer;
    margin-left: 8px;
}

header .history {
    position: relative;
    top: 2px;
    margin-right: 8px;
}

header .history > span,
header .manage-local > span {
    display: inline-block;
    cursor: pointer;
    padding: 10px 6px;
    font-size: 20px;
    line-height: 24px;
    text-align: center;
    color: white;
}

header .history > span:active,
header .manage-local > span:active {
    text-shadow: 0 0 3px white;
}

div.pay {
    margin: 16px 12px;
    color: #eee;
}

div.pay button {
    margin-right: 8px;
}

div.pay .btn-link {
    color: #999;
}

.info div.pay {
    color: #333;
    margin-left: 0;
}

/* Info */
.loading-content {
    position: absolute;
    height: 100px;
    width: 100%;
}

.loading-content .spinner {
    position: absolute;
    top: 50%;
    left: 50%;

    width: 40px;
    height: 40px;

    border: solid 4px transparent;
    border-top-color: #666;
    border-left-color: #666;
    border-radius: 50%;

    -webkit-animation: progress-spinner 1s linear infinite;
    opacity: 1;
}

.loading-content .spinner-transition {
    transition: opacity .15s ease-in-out;
}

.loading-content .spinner-transparent {
    opacity: 0;
}

.info:not(:empty) {
    padding: 16px 16px 0;
    position: relative;
    z-index: 2;
}

.info figure {
    display: inline-block;
    margin: 0 12px 24px 0;
    width: 126px;
}

.info figure .loading {
    background: url(loading.gif) 50% 50% no-repeat;
}

.info figure .nothing {
    width: 126px;
    height: 126px;
    line-height: 126px;
    font-size: 28px;
}

.info figure.only-cover .nothing {
    width: 174px;
    height: 174px;
    line-height: 174px;
}

.info figcaption {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.info figcaption a {
    color: #333;
}

.info .news-header {
    margin-top: 12px;
}

.info .only-cover {
    margin: 0 12px 12px 0;
    width: 174px;
}

.info .breadcrumb {
    display: inline-block;
    max-width: calc(100% - 174px - 12px);
}

.info .breadcrumb a {
    color: #333;
}

.info .bs-callout {
    padding-right: 15px;
}

.info .bs-callout .form-group {
    margin: 0;
}

.info .similar ul {
    font-size: inherit;
    display: inline;
    -webkit-padding-start: 8px;
}

.info .similar li {
    font-size: inherit;
    display: inline;
}

.info .similar li:not(:last-child)::after {
    content: ", ";
}

.info div.radio {
    margin-top: 5px;
    margin-bottom: 5px;
}

.info .news-list {
    font-size: 14px;
    line-height: 24px;
}

.study .wtf {
    border-bottom: 1px dotted;
}

.study .wtf:hover {
    border-bottom: none;
}

.settings .saved {
    margin-left: 12px;
    transition: all .8s ease-in;
}

.settings .saved-hiding {
    margin-left: 24px;
    opacity: 0;
}

/* Music */
.music {
    padding: 16px 0 16px;
    position: relative;
    z-index: 2;
    clear: both;
}

.music .most-popular-tracks {
    margin-bottom: 16px;
}

.music .most-popular-tracks .lead {
    padding: 0 16px;
    margin-bottom: 8px;
}

.music .more {
    margin: 12px 0 0;
    cursor: pointer;
}

.music .more::before {
    content: "__MSG_more__...";
}

.song,
.song-queue {
    padding: 5px 16px;
    margin: 0;
    position: relative;
    z-index: 2;
    overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.song .duration {
    margin-left: 8px;
}

.music .song-playing-bg {
    position: absolute;
    width: 100%;
}

.music .song-playing-bg .song-playing-progress {
    position: absolute;
    padding: 5px 0;
    background: #e8e8e8;
    z-index: 1;
}

.song .play,
.song .pause,
.song .cloud,
.song .download
 {
    margin-right: 6px;
    cursor: pointer;
}

.song .cloud.pending {
    color: #ccc;
    cursor: default;
}

.song a,
.song span.link {
    color: #333;
}

footer {
    background: white;
    padding: 12px 0 8px 8px;
    position: fixed;
    width: 100%;
    bottom: 0;
    z-index: 100;

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

footer .player-buttons,
footer .mode-volume {
    position: relative;
    top: 2px;
}

footer .mode-volume {
    padding-right: 8px;
    background: white;
}

footer .player-buttons > span,
footer .mode-volume > span {
    display: inline-block;
    cursor: pointer;
    padding: 0 2px;
    font-size: 18px;
    line-height: 1;
    text-align: center;
    color: #666;
}

footer .song-title {
    margin-left: 8px;
}

footer .song-title .track-artist {
    color: #333;
    font-weight: bold;
}

footer .player-buttons > span:active,
footer .mode-volume > span:active {
    text-shadow: 0 0 3px white;
}

footer .mode-volume > span {
    padding: 0 4px;
    color: #bcbcbc;
}

footer .mode-volume span.active {
    color: #333;
    text-shadow: 0 0 1px black;
}

footer input[type='range'] {
    width: 80px;
    margin-left: 8px;
}

footer .song-playing-bg {
    height: 4px;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    cursor: pointer;
    background: #dadada;
}

footer .song-playing-bg .song-playing-progress {
    background: #5BC0DE;
    height: 4px;
    display: inline-block;
    vertical-align: top;
}

